include/lpm.h

/* ============================================================================
 * Data Structures - Optimized for Speed
 * ============================================================================ */

typedef struct lpm_trie lpm_trie_t;
int lpm_add_ipv4_8stride(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len, uint32_t next_hop);
int lpm_delete_ipv4_8stride(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len);
uint32_t lpm_lookup_ipv4_8stride(const lpm_trie_t *trie, uint32_t addr);
uint32_t lpm_lookup_ipv4_8stride_bytes(const lpm_trie_t *trie, const uint8_t *addr);
void lpm_lookup_batch_ipv4_8stride(const lpm_trie_t *trie, const uint32_t *addrs, 
                                    uint32_t *next_hops, size_t count);
/* ============================================================================
 * ALGORITHM-SPECIFIC API: IPv6 Wide 16-bit Stride
 *
 * Uses 16-bit stride for first level, then 8-bit for remaining.
 * Optimal for IPv6 with common /48 allocations.
 * ============================================================================ */

lpm_trie_t *lpm_create_ipv6_wide16(void);
int lpm_add_ipv6_wide16(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len, uint32_t next_hop);
int lpm_delete_ipv6_wide16(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len);
uint32_t lpm_lookup_ipv6_wide16(const lpm_trie_t *trie, const uint8_t addr[16]);
void lpm_lookup_batch_ipv6_wide16(const lpm_trie_t *trie, const uint8_t (*addrs)[16],
                                   uint32_t *next_hops, size_t count);
/* ============================================================================
 * ALGORITHM-SPECIFIC API: IPv6 8-bit Stride
 *
 * Standard 8-bit stride trie for IPv6. 16 levels maximum.
 * Simple and memory-efficient for sparse prefix sets.
 * ============================================================================ */

lpm_trie_t *lpm_create_ipv6_8stride(void);
int lpm_add_ipv6_8stride(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len, uint32_t next_hop);
int lpm_delete_ipv6_8stride(lpm_trie_t *trie, const uint8_t *prefix, uint8_t prefix_len);
uint32_t lpm_lookup_ipv6_8stride(const lpm_trie_t *trie, const uint8_t addr[16]);
void lpm_lookup_batch_ipv6_8stride(const lpm_trie_t *trie, const uint8_t (*addrs)[16],
                                    uint32_t *next_hops, size_t count);
/* ============================================================================
 * LEGACY API (for backwards compatibility)
 *
 * These functions provide the original API behavior.
 * ============================================================================ */

/* Legacy create with depth parameter */
lpm_trie_t *lpm_create(uint8_t max_depth);
/* Legacy generic lookup (auto-detects based on max_depth) */
uint32_t lpm_lookup(const lpm_trie_t *trie, const uint8_t *addr);
const char *lpm_get_version(void);
void lpm_print_stats(const lpm_trie_t *trie);