bindings/csharp/LibLpm/NativeMethods.cs


        /// <summary>
        /// Adds a prefix using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_add_ipv4_8stride(IntPtr trie, byte[] prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Adds a prefix using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_add_ipv4_8stride(IntPtr trie, byte* prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Deletes a prefix using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_delete_ipv4_8stride(IntPtr trie, byte[] prefix, byte prefix_len);

        /// <summary>
        /// Deletes a prefix using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_delete_ipv4_8stride(IntPtr trie, byte* prefix, byte prefix_len);

        /// <summary>
        /// Performs an IPv4 lookup using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint lpm_lookup_ipv4_8stride(IntPtr trie, uint addr);

        /// <summary>
        /// Performs an IPv4 lookup using 8-bit stride algorithm (byte array version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint lpm_lookup_ipv4_8stride_bytes(IntPtr trie, byte[] addr);

        /// <summary>
        /// Performs an IPv4 lookup using 8-bit stride algorithm (byte array version, unsafe).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe uint lpm_lookup_ipv4_8stride_bytes(IntPtr trie, byte* addr);

        /// <summary>
        /// Performs a batch IPv4 lookup using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lpm_lookup_batch_ipv4_8stride(IntPtr trie, uint[] addrs, uint[] next_hops, UIntPtr count);

        /// <summary>
        /// Performs a batch IPv4 lookup using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void lpm_lookup_batch_ipv4_8stride(IntPtr trie, uint* addrs, uint* next_hops, UIntPtr count);

        // ============================================================================
        // ALGORITHM-SPECIFIC API: IPv6 Wide 16-bit Stride
        // ============================================================================

        /// <summary>
        /// Creates a new IPv6 LPM trie using wide 16-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lpm_create_ipv6_wide16();

        /// <summary>
        /// Adds a prefix using wide 16-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_add_ipv6_wide16(IntPtr trie, byte[] prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Adds a prefix using wide 16-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_add_ipv6_wide16(IntPtr trie, byte* prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Deletes a prefix using wide 16-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_delete_ipv6_wide16(IntPtr trie, byte[] prefix, byte prefix_len);

        /// <summary>
        /// Deletes a prefix using wide 16-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_delete_ipv6_wide16(IntPtr trie, byte* prefix, byte prefix_len);

        /// <summary>
        /// Performs an IPv6 lookup using wide 16-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint lpm_lookup_ipv6_wide16(IntPtr trie, byte[] addr);

        /// <summary>
        /// Performs an IPv6 lookup using wide 16-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe uint lpm_lookup_ipv6_wide16(IntPtr trie, byte* addr);

        /// <summary>
        /// Performs a batch IPv6 lookup using wide 16-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void lpm_lookup_batch_ipv6_wide16(IntPtr trie, byte* addrs, uint* next_hops, UIntPtr count);

        // ============================================================================
        // ALGORITHM-SPECIFIC API: IPv6 8-bit Stride
        // ============================================================================

        /// <summary>
        /// Creates a new IPv6 LPM trie using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lpm_create_ipv6_8stride();

        /// <summary>
        /// Adds a prefix using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_add_ipv6_8stride(IntPtr trie, byte[] prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Adds a prefix using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_add_ipv6_8stride(IntPtr trie, byte* prefix, byte prefix_len, uint next_hop);

        /// <summary>
        /// Deletes a prefix using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lpm_delete_ipv6_8stride(IntPtr trie, byte[] prefix, byte prefix_len);

        /// <summary>
        /// Deletes a prefix using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe int lpm_delete_ipv6_8stride(IntPtr trie, byte* prefix, byte prefix_len);

        /// <summary>
        /// Performs an IPv6 lookup using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint lpm_lookup_ipv6_8stride(IntPtr trie, byte[] addr);

        /// <summary>
        /// Performs an IPv6 lookup using 8-bit stride algorithm (unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe uint lpm_lookup_ipv6_8stride(IntPtr trie, byte* addr);

        /// <summary>
        /// Performs a batch IPv6 lookup using 8-bit stride algorithm.
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe void lpm_lookup_batch_ipv6_8stride(IntPtr trie, byte* addrs, uint* next_hops, UIntPtr count);

        // ============================================================================
        // LEGACY API
        // ============================================================================

        /// <summary>
        /// Creates a new LPM trie with specified max depth (legacy API).
        /// </summary>
        /// <param name="max_depth">Maximum prefix depth (32 for IPv4, 128 for IPv6).</param>
        /// <returns>Pointer to the created trie, or IntPtr.Zero on failure.</returns>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lpm_create(byte max_depth);

        /// <summary>
        /// Performs a lookup in the trie (legacy API, auto-detects based on max_depth).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint lpm_lookup(IntPtr trie, byte[] addr);

        /// <summary>
        /// Performs a lookup in the trie (legacy API, unsafe version).
        /// </summary>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern unsafe uint lpm_lookup(IntPtr trie, byte* addr);

        // ============================================================================
        // UTILITY FUNCTIONS
        // ============================================================================

        /// <summary>
        /// Gets the library version string.
        /// </summary>
        /// <returns>Pointer to a null-terminated version string.</returns>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lpm_get_version();

        /// <summary>
        /// Prints trie statistics to stdout.
        /// </summary>
        /// <param name="trie">Pointer to the trie.</param>
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lpm_print_stats(IntPtr trie);
    }
}
